Source/Hugo/k8s/service.yml
---
  apiVersion: v1
  kind: Service
  metadata:
    name: documentation
    namespace: dolittle
    labels:
      app: documentation
  spec:
    ports:
    - port: 80
      targetPort: 3000
      name: documentation-port
      protocol: TCP
    selector:
      app: documentation
      name: documentation
